[workspace]
resolver = "3"
members = [
    "src/bin",
    "src/lib/mc_config",
    "src/lib/qexed_child_node",
    "src/lib/qexed_config",
    "src/lib/qexed_control",
    "src/lib/qexed_core", 
    "src/lib/qexed_net",
    "src/lib/qexed_parent_node",
    "src/lib/qexed_single_server",
    "src/lib/qexed_web",
]
[workspace.dependencies]
thiserror = "1.0"
rust-i18n = "3.1.5"
rustpython = { version = "0.4.0"}
anyhow = "1.0"  # 用于简化错误处理
mc_config = { path = "./mc_config" }
tokio = { version = "1.47.1", features = ["full"] }
tklog = "0.3.0"
log = "0.4.27"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
once_cell = "1.21.3"
[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"  # 用于测试命令行输出
predicates = "2.1"  # 断言库
