[workspace]
resolver = "3"
members = [
    "src/bin",
    "src/lib/mc_config",
    "src/lib/qexed_child_node",
    "src/lib/qexed_config",
    "src/lib/qexed_control",
    "src/lib/qexed_core", 
    "src/lib/qexed_net",
    "src/lib/qexed_parent_node",
    "src/lib/qexed_single_server",
    "src/lib/qexed_web", 
    "src/lib/qexed_world", 
    "src/lib/qexed_worldgen",
]
[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"                                           # 用于简化错误处理
tokio = { version = "1.47.1", features = ["full"] }
tklog = "0.3.0"
log = "0.4.27"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
once_cell = "1.21.3"
mc_config = { path = "./src/lib/mc_config" }
qexed_config ={ path="./src/lib/qexed_config"}
qexed_single_server ={ path="./src/lib/qexed_single_server"}
qexed_core ={ path="./src/lib/qexed_core"}
qexed_net ={ path="./src/lib/qexed_net"}
qexed_world ={ path="src/lib/qexed_world"}
qexed_worldgen ={ path="src/lib/qexed_worldgen"}
futures = "0.3.31"
tracing = "0.1.41"
typename = "0.1.2"
rand = "0.9.2"
async-stream = "0.3.6"
bytes = "1.10.1"
flate2 = "1.1.2"
serde_json = "1.0.142"
uuid = "1.17.0"
reqwest = { version = "0.12.22", features = ["json"] }
fmt = "0.1.0"
aes = "0.8.4"
cfb8 = { version = "0.8.1", features = ["aes"] }
cfb-mode = "0.8.2"
rust_event = "0.1.2"
crab_nbt = { version = "0.2.11", features = ["serde"] }
mongodb = "3.2.4"
bson = "2.15.0"
simdnoise = "3.1.6"
async-trait = "0.1.88"
tokio-stream = "0.1.17"
phf = "0.12.1"
flume = "0.11.1"
paste = "1.0.15"
ctor = "0.4.3"
ctr = "0.9.2"
futures-util = "0.3.31"
