[package]
name = "qexed_core"
version = "0.1.0"
edition = "2024"

[dependencies]

futures.workspace = true
tokio.workspace = true

once_cell.workspace = true

rust_event.workspace = true
qexed_net.workspace = true

log.workspace = true
bytes.workspace = true
crab_nbt.workspace = true
anyhow.workspace = true
mongodb.workspace = true
uuid.workspace = true
serde.workspace = true
qexed_config.workspace = true
chrono.workspace = true
bson.workspace = true
simdnoise.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true
phf.workspace = true
flume.workspace = true
paste.workspace = true
ctor.workspace = true