[package]
name = "qexed_net"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures.workspace = true
tracing.workspace = true
typename.workspace = true
log.workspace = true
tklog.workspace = true
tokio.workspace = true
rand.workspace = true
async-stream.workspace = true
bytes.workspace = true
flate2.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
once_cell.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest.workspace = true
ctr.workspace = true
aes.workspace = true
crab_nbt.workspace = true
bitflags.workspace = true


